fix: sidebar z-index 980 to 98 #LDP-369 (#27)
* fix: sidebar z-index 980 to 98 #LDP-369

* fix: uk-sticky-fixed z-index #LDP-369

--- a/src/pingcode/css/app.scss
+++ b/src/pingcode/css/app.scss
@@ -382,6 +382,9 @@ a {
   }
 }
 .sidebar-box {
+  > .uk-sticky-fixed {
+    z-index: initial;
+  }
   .item {
     .uk-card-title {
       font-size: 16px;
